--- a/debug_springframework/pom.xml
+++ b/debug_springframework/pom.xml
@@ -15,7 +15,7 @@
     <description>debug_springframework</description>
     <properties>
         <java.version>17</java.version>
-        <spring-aspects>6.0.0</spring-aspects>
+
     </properties>
     <dependencies>
         <dependency>
@@ -36,12 +36,22 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
-            <version>${spring-aspects}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
