--- a/debug_distributedlock/pom.xml
+++ b/debug_distributedlock/pom.xml
@@ -16,6 +16,8 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>jvmlock</module>
+		<module>redisTemplate</module>
+		<module>redissonClient</module>
 	</modules>
 	<properties>
 		<java.version>17</java.version>
