--- a/debug_distributedlock/redissonClient/pom.xml
+++ b/debug_distributedlock/redissonClient/pom.xml
@@ -9,23 +9,23 @@
 <!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     </parent>
     <groupId>org.lyflexi</groupId>
-    <artifactId>jvmlock</artifactId>
+    <artifactId>redissonClient</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>jvmlock</name>
-    <description>jvmlock</description>
+    <name>redissonClient</name>
+    <description>redissonClient</description>
     <properties>
         <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.23.0</version>
         </dependency>
     </dependencies>
 
