--- a/debug_distributedlock/pom.xml
+++ b/debug_distributedlock/pom.xml
@@ -16,8 +16,9 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>jvmlock</module>
-		<module>redisTemplate</module>
+		<module>redisHandsonDistriLock</module>
 		<module>redissonClient</module>
+		<module>zkHandsonDistriLock</module>
 	</modules>
 	<properties>
 		<java.version>17</java.version>
