--- a/debug_distributedlock/redisHandsonDistriLock/pom.xml
+++ b/debug_distributedlock/redisHandsonDistriLock/pom.xml
@@ -9,10 +9,10 @@
 <!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     </parent>
     <groupId>org.lyflexi</groupId>
-    <artifactId>redisTemplate</artifactId>
+    <artifactId>redisHandsonDistriLock</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>redisTemplate</name>
-    <description>redisTemplate</description>
+    <name>redisHandsonDistriLock</name>
+    <description>redisHandsonDistriLock</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -22,11 +22,7 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+
     </dependencies>
 
     <build>
