springboot3传统servlet路线调试完毕

--- a/debug_springboot/src/main/resources/application.properties
+++ b/debug_springboot/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 test-int=0
+# ???????????????? ??????format ????????
+spring.mvc.contentnegotiation.favor-parameter=true
+# ????????
+spring.mvc.contentnegotiation.media-types.yaml=text/yaml
+
+robot.name=i'm robot
+robot.age=19
+robot.email=haha@qq.com
