--- a/debug_jdk/designPartens/pom.xml
+++ b/debug_jdk/designPartens/pom.xml
@@ -26,6 +26,17 @@
             <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.78</version> <!-- 根据你需要的版本进行替换 -->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version> <!-- 根据你需要的版本进行替换 -->
+        </dependency>
+
 
     </dependencies>
 </project>
