--- a/debug_jdk/alonejdk/pom.xml
+++ b/debug_jdk/alonejdk/pom.xml
@@ -29,5 +29,10 @@
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
     </dependencies>
 </project>
