--- a/debug_jdk/pom.xml
+++ b/debug_jdk/pom.xml
@@ -18,6 +18,7 @@
         <module>alonejdk</module>
         <module>designPartens</module>
         <module>spi-ServiceProviderInterface</module>
+        <module>eliminateSynchronized</module>
     </modules>
     <properties>
         <java.version>17</java.version>
