--- a/debug_distributedlock/mysqlock/pom.xml
+++ b/debug_distributedlock/mysqlock/pom.xml
@@ -6,13 +6,13 @@
         <groupId>org.lyflexi</groupId>
         <artifactId>debug_distributedlock</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-<!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+        <!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
     </parent>
     <groupId>org.lyflexi</groupId>
-    <artifactId>jvmlock</artifactId>
+    <artifactId>mysqlock</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>jvmlock</name>
-    <description>jvmlock</description>
+    <name>mysqlock</name>
+    <description>mysqlock</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -22,7 +22,11 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
