--- a/debug_distributedlock/pom.xml
+++ b/debug_distributedlock/pom.xml
@@ -20,6 +20,7 @@
 		<module>redissonClient</module>
 		<module>zkHandsonDistriLock</module>
 		<module>zkCurator</module>
+		<module>mysqlock</module>
 	</modules>
 	<properties>
 		<java.version>17</java.version>
@@ -40,6 +41,20 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-tx -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>5.3.16</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
