--- a/debug_springboot/src/main/resources/application.properties
+++ b/debug_springboot/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+# actuator
+#?web????
+management.endpoints.web.exposure.include=*
+#??actuator???metrics????
+management.endpoints.enabled-by-default=true
+#??????
+management.endpoint.health.enabled=true
+#?????????????????????
+management.endpoint.health.show-details=always
+
+
 test-int=0
 # ???????????????? ??????format ????????
 spring.mvc.contentnegotiation.favor-parameter=true
@@ -7,3 +18,5 @@ spring.mvc.contentnegotiation.media-types.yaml=text/yaml
 robot.name=i'm robot
 robot.age=19
 robot.email=haha@qq.com
+
+
