--- a/debug_jdk/alonejdk/pom.xml
+++ b/debug_jdk/alonejdk/pom.xml
@@ -52,6 +52,10 @@
             <version>${jmh.version}</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.14.4</version>
+        </dependency>
     </dependencies>
 </project>
