--- a/debug_xxljob/pom.xml
+++ b/debug_xxljob/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.xuxueli</groupId>
-	<artifactId>xxl-job</artifactId>
+	<artifactId>debug_xxljob</artifactId>
 	<version>2.4.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
