--- a/debug_xxljob/xxl-job-core/pom.xml
+++ b/debug_xxljob/xxl-job-core/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.xuxueli</groupId>
-		<artifactId>xxl-job</artifactId>
+		<artifactId>debug_xxljob</artifactId>
 		<version>2.4.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>xxl-job-core</artifactId>
