[a]openfeign代理源码追踪/openfeign可插拔式HTTP客户端集成能力源码追踪

--- a/debug_springcloudalibaba/debug_openfeign/feign-order-client/pom.xml
+++ b/debug_springcloudalibaba/debug_openfeign/feign-order-client/pom.xml
@@ -62,6 +62,17 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+
+        <!--发送http请求的适配器httpclient-->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-httpclient</artifactId>
+        </dependency>
+        <!--发送http请求的适配器okhttp-->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
