--- a/debug_jdk/pom.xml
+++ b/debug_jdk/pom.xml
@@ -27,7 +27,9 @@
         <jol.core.version>0.9</jol.core.version>
         <javapoet.version>1.11.1</javapoet.version>
         <itranswarp.version>1.0</itranswarp.version>
-
+        <lombok.version>1.18.20</lombok.version>
+        <slf4j.version>1.8.0-beta4</slf4j.version>
+        <hutool.version>4.5.2</hutool.version>
     </properties>
     <dependencies>
         <dependency>
@@ -42,11 +44,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -76,8 +73,25 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>4.5.2</version>
+            <version>${hutool.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+            <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
 
     </dependencies>
 
