--- a/debug_rabbitmq/pom.xml
+++ b/debug_rabbitmq/pom.xml
@@ -16,7 +16,12 @@
     <description>debug_rabbitmq</description>
     <modules>
         <module>amqp-client</module>
+        <module>custom_rabbit_framework</module>
     </modules>
+    <properties>
+        <java.version>17</java.version>
+        <hutool.version>4.5.2</hutool.version>
+    </properties>
     <url/>
     <licenses>
         <license/>
@@ -30,9 +35,6 @@
         <tag/>
         <url/>
     </scm>
-    <properties>
-        <java.version>17</java.version>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -47,6 +49,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
     </dependencies>
 
