--- a/debug_jetcache/custom_jetcache_framework/pom.xml
+++ b/debug_jetcache/custom_jetcache_framework/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>org.lylfexi</groupId>
+        <artifactId>debug_jetcache</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <groupId>org.lyflexi</groupId>
     <artifactId>custom_jetcache_framework</artifactId>
@@ -27,34 +26,13 @@
         <url/>
     </scm>
     <properties>
-        <java.version>17</java.version>
-        <hutool.version>4.5.2</hutool.version>
-        <jetcache.version>2.7.5</jetcache.version>
+
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>2.0.25</version>
+            <version>${fastjson.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -69,13 +47,8 @@
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
-            <version>1.3.2</version>
+            <version>${javax.annotation.api.version}</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.alicp.jetcache</groupId>
-            <artifactId>jetcache-starter-redis</artifactId>
-            <version>${jetcache.version}</version>
         </dependency>
     </dependencies>
 
