--- a/debug_java_development_kit/pom.xml
+++ b/debug_java_development_kit/pom.xml
@@ -82,6 +82,16 @@
 <!--            <artifactId>compiler</artifactId>-->
 <!--            <version>${itranswarp.version}</version>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
 
     </dependencies>
 
