[a]1.rabbit各种死信队列，延迟队列，优先级队列测试完毕 2.高可用篇（理解） 3.异地容灾篇（了解）

--- a/debug_rabbitmq/boot_rabbit_consumer/src/main/resources/application.yml
+++ b/debug_rabbitmq/boot_rabbit_consumer/src/main/resources/application.yml
@@ -10,4 +10,4 @@ spring:
     listener:
       simple:
         acknowledge-mode: manual # 把消息确认模式改为手动确认
-        prefetch: 1 # 每次从队列中取回消息的数量
+        prefetch: 1 # 每次从队列中取回消息的数量，消费端限流
