--- a/debug_rabbitmq/boot_rabbit_common/pom.xml
+++ b/debug_rabbitmq/boot_rabbit_common/pom.xml
@@ -7,11 +7,10 @@
         <artifactId>debug_rabbitmq</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>org.lyflexi</groupId>
-    <artifactId>boot_rabbit_consumer</artifactId>
+    <artifactId>boot_rabbit_common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>boot_rabbit_consumer</name>
-    <description>boot_rabbit_consumer</description>
+    <name>boot_rabbit_common</name>
+    <description>boot_rabbit_common</description>
     <url/>
     <licenses>
         <license/>
@@ -30,11 +29,6 @@
     </properties>
     <dependencies>
 
-        <dependency>
-            <groupId>org.lyflexi</groupId>
-            <artifactId>boot_rabbit_common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
     </dependencies>
 
     <build>
