--- a/debug_rabbitmq/boot_rabbit_producer/pom.xml
+++ b/debug_rabbitmq/boot_rabbit_producer/pom.xml
@@ -30,8 +30,9 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
+            <groupId>org.lyflexi</groupId>
+            <artifactId>boot_rabbit_common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
