--- a/debug_jetcache/pom.xml
+++ b/debug_jetcache/pom.xml
@@ -28,6 +28,8 @@
         <hutool.version>4.5.2</hutool.version>
         <fastjson.version>2.0.25</fastjson.version>
         <javax.annotation.api.version>1.3.2</javax.annotation.api.version>
+        <validation-api.version>2.0.1.Final</validation-api.version>
+
     </properties>
 
     <dependencies>
@@ -49,6 +51,15 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${validation-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
         </dependency>
     </dependencies>
 
