--- a/debug_xxljob/pom.xml
+++ b/debug_xxljob/pom.xml
@@ -14,6 +14,7 @@
 		<module>xxl-job-core</module>
 		<module>xxl-job-admin</module>
 		<module>xxl-job-executor-samples</module>
+		<module>custom_xxljob_executor_framework</module>
     </modules>
 
 	<properties>
