--- a/debug_jetcache/custom_jetcache_framework/src/main/resources/application.yml
+++ b/debug_jetcache/custom_jetcache_framework/src/main/resources/application.yml
@@ -37,6 +37,11 @@ spring:
   application:
     name: custom_jetcache_framework
     port: 8080
+  data:
+    redis:
+      host: 192.168.18.100
+      port: 6379
+      database: 0
 jetcache:
   #统计间隔，0表示不统计
   statIntervalMinutes: 15
