--- a/debug_distributedlock/pom.xml
+++ b/debug_distributedlock/pom.xml
@@ -24,10 +24,20 @@
     </modules>
     <properties>
         <java.version>17</java.version>
+        <mybatis.plus.version>3.5.6</mybatis.plus.version>
+        <mybatis.spring.version>3.0.3</mybatis.spring.version>
     </properties>
     <dependencies>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
